syntax = "proto3";

option csharp_namespace = "GrpcServerMain";
import "Protos/transaction.proto";
import "Protos/card.proto";
package users;

service Users {
	rpc GetUserCards (transactions.UserRequest) returns (cards.CardListResponse);
}

message User {
	int32 id = 1;
	string name = 2;
}